fix sidebar visibility issue

--- a/styles.css
+++ b/styles.css
@@ -117,10 +117,6 @@ li {
     font-size: 2rem;
 }
 
-.visible {
-    transform: translateX(0);
-}
-
 .icons {
     display: flex;
     width: 30%;
@@ -240,7 +236,10 @@ li {
     padding: 2rem 1.5rem;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
-    
+}
+
+.mobile-menu.visible {
+    transform: translateX(0);
 }
 
 .mobile-menu .links {
